--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "laravel/framework": "5.8.*",
         "laravel/nexmo-notification-channel": "^2.1",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8.0",
+        "laravelcollective/html": "^5.8.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
