--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,15 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
-        "laravel/framework": "5.8.*",
+        "laravel/framework": "^6.0",
+        "laravel/helpers": "^1.3",
         "laravel/nexmo-notification-channel": "^2.1",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8.0"
+        "laravelcollective/html": "^6.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
+        "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
